packages/kbn-interpreter/src/plugins/data/kuery.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(query, trailing) {
          if (trailing.type === 'cursor') {
            return {
              ...trailing,
              suggestionTypes: ['conjunction']
            };
          }
          if (query !== null) return query;
          return nodeTypes.function.buildNode('is', '*', '*');
        },
      peg$c1 = function(head, query) { return query; },
      peg$c2 = function(head, tail) {
          const nodes = [head, ...tail];
          const cursor = parseCursor && nodes.find(node => node.type === 'cursor');
          if (cursor) return cursor;
          return buildFunctionNode('or', nodes);
        },
      peg$c3 = function(head, tail) {
          const nodes = [head, ...tail];
          const cursor = parseCursor && nodes.find(node => node.type === 'cursor');
          if (cursor) return cursor;
          return buildFunctionNode('and', nodes);
        },
      peg$c4 = function(query) {
          if (query.type === 'cursor') return query;
          return buildFunctionNode('not', [query]);
        },
      peg$c5 = "(",
      peg$c6 = peg$literalExpectation("(", false),
      peg$c7 = ")",
      peg$c8 = peg$literalExpectation(")", false),
      peg$c9 = function(query, trailing) {
          if (trailing.type === 'cursor') {
            return {
              ...trailing,
              suggestionTypes: ['conjunction']
            };
          }
          return query;
        },
      peg$c10 = ":",
      peg$c11 = peg$literalExpectation(":", false),
      peg$c12 = "{",
      peg$c13 = peg$literalExpectation("{", false),
      peg$c14 = "}",
      peg$c15 = peg$literalExpectation("}", false),
      peg$c16 = function(field, query, trailing) {
            if (query.type === 'cursor') {
              return {
                ...query,
                nestedPath: query.nestedPath ? `${field.value}.${query.nestedPath}` : field.value,
              }
            };

            if (trailing.type === 'cursor') {
              return {
                ...trailing,
                suggestionTypes: ['conjunction']
              };
            }
            return buildFunctionNode('nested', [field, query]);
          },
      peg$c17 = peg$otherExpectation("fieldName"),
      peg$c18 = function(field, operator, value) {
          if (value.type === 'cursor') {
            return {
              ...value,
              suggestionTypes: ['conjunction']
            };
          }
          const range = buildNamedArgNode(operator, value);
          return buildFunctionNode('range', [field, range]);
        },
      peg$c19 = function(field, partial) {
          if (partial.type === 'cursor') {
            return {
              ...partial,
              fieldName: field.value,
              suggestionTypes: ['value', 'conjunction']
            };
          }
          return partial(field);
        },
      peg$c20 = function(partial) {
          if (partial.type === 'cursor') {
            const fieldName = `${partial.prefix}${partial.suffix}`.trim();
            return {
              ...partial,
              fieldName,
              suggestionTypes: ['field', 'operator', 'conjunction']
            };
          }
          const field = buildLiteralNode(null);
          return partial(field);
        },
      peg$c21 = function(partial, trailing) {
          if (trailing.type === 'cursor') {
            return {
              ...trailing,
              suggestionTypes: ['conjunction']
            };
          }
          return partial;
        },
      peg$c22 = function(head, partial) { return partial; },
      peg$c23 = function(head, tail) {
          const nodes = [head, ...tail];
          const cursor = parseCursor && nodes.find(node => node.type === 'cursor');
          if (cursor) {
            return {
              ...cursor,
              suggestionTypes: ['value']
            };
          }
          return (field) => buildFunctionNode('or', nodes.map(partial => partial(field)));
        },
      peg$c24 = function(head, tail) {
          const nodes = [head, ...tail];
          const cursor = parseCursor && nodes.find(node => node.type === 'cursor');
          if (cursor) {
            return {
              ...cursor,
              suggestionTypes: ['value']
            };
          }
          return (field) => buildFunctionNode('and', nodes.map(partial => partial(field)));
        },
      peg$c25 = function(partial) {
          if (partial.type === 'cursor') {
            return {
              ...list,
              suggestionTypes: ['value']
            };
          }
          return (field) => buildFunctionNode('not', [partial(field)]);
        },
      peg$c26 = peg$otherExpectation("value"),
      peg$c27 = function(value) {
          if (value.type === 'cursor') return value;
          const isPhrase = buildLiteralNode(true);
          return (field) => buildFunctionNode('is', [field, value, isPhrase]);
        },
      peg$c28 = function(value) {
          if (value.type === 'cursor') return value;

          if (!allowLeadingWildcards && value.type === 'wildcard' && nodeTypes.wildcard.hasLeadingWildcard(value)) {
            error('Leading wildcards are disabled. See query:allowLeadingWildcards in Advanced Settings.');
          }

          const isPhrase = buildLiteralNode(false);
          return (field) => buildFunctionNode('is', [field, value, isPhrase]);
        },
      peg$c29 = peg$otherExpectation("OR"),
      peg$c30 = "or",
      peg$c31 = peg$literalExpectation("or", true),
      peg$c32 = peg$otherExpectation("AND"),
      peg$c33 = "and",
      peg$c34 = peg$literalExpectation("and", true),
      peg$c35 = peg$otherExpectation("NOT"),
      peg$c36 = "not",
      peg$c37 = peg$literalExpectation("not", true),
      peg$c38 = peg$otherExpectation("literal"),
      peg$c39 = function() { return parseCursor; },
      peg$c40 = "\"",
      peg$c41 = peg$literalExpectation("\"", false),
      peg$c42 = function(prefix, cursor, suffix) {
          const { start, end } = location();
          return {
            type: 'cursor',
            start: start.offset,
            end: end.offset - cursor.length,
            prefix: prefix.join(''),
            suffix: suffix.join(''),
            text: text().replace(cursor, '')
          };
        },
      peg$c43 = function(chars) {
          return buildLiteralNode(chars.join(''));
        },
      peg$c44 = "\\",
      peg$c45 = peg$literalExpectation("\\", false),
      peg$c46 = /^[\\"]/,
      peg$c47 = peg$classExpectation(["\\", "\""], false, false),
      peg$c48 = function(char) { return char; },
      peg$c49 = /^[^"]/,
      peg$c50 = peg$classExpectation(["\""], true, false),
      peg$c51 = function(chars) {
          const sequence = chars.join('').trim();
          if (sequence === 'null') return buildLiteralNode(null);
          if (sequence === 'true') return buildLiteralNode(true);
          if (sequence === 'false') return buildLiteralNode(false);
          if (chars.includes(wildcardSymbol)) return buildWildcardNode(sequence);
          return buildLiteralNode(sequence);
        },
      peg$c52 = peg$anyExpectation(),
      peg$c53 = "*",
      peg$c54 = peg$literalExpectation("*", false),
      peg$c55 = function() { return wildcardSymbol; },
      peg$c56 = "\\t",
      peg$c57 = peg$literalExpectation("\\t", false),
      peg$c58 = function() { return '\t'; },
      peg$c59 = "\\r",
      peg$c60 = peg$literalExpectation("\\r", false),
      peg$c61 = function() { return '\r'; },
      peg$c62 = "\\n",
      peg$c63 = peg$literalExpectation("\\n", false),
      peg$c64 = function() { return '\n'; },
      peg$c65 = function(keyword) { return keyword; },
      peg$c66 = /^[\\():<>"*{}]/,
      peg$c67 = peg$classExpectation(["\\", "(", ")", ":", "<", ">", "\"", "*", "{", "}"], false, false),
      peg$c68 = function(sequence) { return sequence; },
      peg$c69 = "u",
      peg$c70 = peg$literalExpectation("u", false),
      peg$c71 = function(digits) {
            return String.fromCharCode(parseInt(digits, 16));
          },
      peg$c72 = /^[0-9a-f]/i,
      peg$c73 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),
      peg$c74 = "<=",
      peg$c75 = peg$literalExpectation("<=", false),
      peg$c76 = function() { return 'lte'; },
      peg$c77 = ">=",
      peg$c78 = peg$literalExpectation(">=", false),
      peg$c79 = function() { return 'gte'; },
      peg$c80 = "<",
      peg$c81 = peg$literalExpectation("<", false),
      peg$c82 = function() { return 'lt'; },
      peg$c83 = ">",
      peg$c84 = peg$literalExpectation(">", false),
      peg$c85 = function() { return 'gt'; },
      peg$c86 = peg$otherExpectation("whitespace"),
      peg$c87 = /^[ \t\r\n\xA0]/,
      peg$c88 = peg$classExpectation([" ", "\t", "\r", "\n", "\xA0"], false, false),
      peg$c89 = "@kuery-cursor@",
      peg$c90 = peg$literalExpectation("@kuery-cursor@", false),
      peg$c91 = function() { return cursorSymbol; },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseSpace();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseSpace();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseOrQuery();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseOptionalSpace();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseOrQuery() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseAndQuery();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseOr();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseAndQuery();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c1(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseOr();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseAndQuery();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c1(s1, s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseAndQuery();
    }

    return s0;
  }

  function peg$parseAndQuery() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseNotQuery();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseAnd();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseNotQuery();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c1(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseAnd();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseNotQuery();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c1(s1, s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseNotQuery();
    }

    return s0;
  }

  function peg$parseNotQuery() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseNot();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSubQuery();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseSubQuery();
    }

    return s0;
  }

  function peg$parseSubQuery() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c5;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseSpace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseSpace();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseOrQuery();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseOptionalSpace();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 41) {
              s5 = peg$c7;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c9(s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseNestedQuery();
    }

    return s0;
  }

  function peg$parseNestedQuery() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parseField();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseSpace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseSpace();
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s3 = peg$c10;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parseSpace();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parseSpace();
          }
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 123) {
              s5 = peg$c12;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c13); }
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parseSpace();
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parseSpace();
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parseOrQuery();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseOptionalSpace();
                  if (s8 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 125) {
                      s9 = peg$c14;
                      peg$currPos++;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c15); }
                    }
                    if (s9 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c16(s1, s7, s8);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseExpression();
    }

    return s0;
  }

  function peg$parseExpression() {
    var s0;

    s0 = peg$parseFieldRangeExpression();
    if (s0 === peg$FAILED) {
      s0 = peg$parseFieldValueExpression();
      if (s0 === peg$FAILED) {
        s0 = peg$parseValueExpression();
      }
    }
